--- a/client/index.css
+++ b/client/index.css
@@ -31,3 +31,15 @@
 .content {
     margin-top: 96px;
 }
+
+.loader {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    display: block;
+    padding: 16px;
+
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
