--- a/public/index.css
+++ b/public/index.css
@@ -10,25 +10,25 @@
     color: #f00;
 }
 
-main
+.main
 {
     margin: 0 60px;
 }
 
-main input
+.input_size_m
 {
     border: solid #000 1px;
     height: 30px;
 }
 
-main input[type="text"]
+.text-input_indents_m
 {
     padding: 0 5px;
 }
 
 .creating-place__button,
-.handlers__filter label,
-.handlers__clear
+.visit-label,
+.editors__clearing
 {
     cursor: pointer;
 }
@@ -38,7 +38,7 @@ main input[type="text"]
     display: none;
 }
 
-.search-notes
+.search-places
 {
     width: 250px;
 }
@@ -73,24 +73,24 @@ main input[type="text"]
     outline: none;
 }
 
-.handlers
+.editors
 {
     margin-top: 30px;
     display: inline-block;
 }
 
-.handlers__title
+.editors__title
 {
     font-size: 32px;
 }
 
-.handlers__clear
+.editors__clearing
 {
     margin-left: 10px;
     height: 25px;
 }
 
-.handlers__filter
+.editors__filters
 {
     margin-left: 25px;
     display: inline-block;
@@ -99,51 +99,51 @@ main input[type="text"]
     border-collapse: collapse;
 }
 
-.handlers__filter td
+.editors__filters .visit-td
 {
     width: 100px;
     text-align: center;
     padding: 0;
 }
 
-.handlers__filter label
+.editors__filters .visit-label
 {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.handlers__filter td:nth-child(n + 2)
+.editors__filters .visit-td:nth-child(n + 2)
 {
     border-left: 1px solid #000;
 }
 
-input[id="all"]:checked ~ .content label[for="all"]
+.filters__checkbox_all:checked + .visit-label,
+.filters__checkbox_no-visit:checked + .visit-label,
+.filters__checkbox__visit:checked + .visit-label
 {
     background: #98FB98;
+}
+
+.filters__checkbox_all:checked + .visit-label
+{
     border-radius: 10px 0 0 10px;
 }
 
-input[id="visit"]:checked ~ .content label[for="visit"]
+.filters__checkbox__visit:checked + .visit-label
 {
-    background: #98FB98;
-}
-
-input[id="visited"]:checked ~ .content label[for="visited"]
-{
-    background: #98FB98;
     border-radius: 0 10px 10px 0;
 }
 
 
-.handlers__filter-underline
+.editors__underline
 {
     margin: 0 -10px;
 }
 
 /* footer */
-html,
-body {
+.html,
+.body {
     height: 100%;
 }
 
@@ -157,7 +157,7 @@ body {
     flex: 1 0 auto;
 }
 
-footer {
+.footer {
     flex: 0 0 auto;
 }
 
@@ -167,13 +167,13 @@ footer {
     font-size: 20px;
 }
 
-.footer__about-service-left-part
+.about-service__author
 {
     padding-left: 15px;
     float: left;
 }
 
-.footer__about-service-right-part
+.about-service__date
 {
     padding-right: 15px;
     float: right;
@@ -184,7 +184,7 @@ footer {
     margin: 20px 0 100px 10px;
 }
 
-.places__element
+.places__travel
 {
     position: relative;
     width: 450px;
@@ -194,18 +194,18 @@ footer {
     align-items: center;
 }
 
-.places__element-button
+.travel__button
 {
     position: absolute;
     cursor: pointer;
 }
 
-.places__icon
+.travel__icon
 {
     height: 25px;
 }
 
-.places__element-title
+.travel__title
 {
     position: absolute;
     left: 100px;
@@ -218,48 +218,48 @@ footer {
     background: #fff;
 }
 
-.places__element-visit-state
+.travel__visit-state
 {
     left: 420px;
 }
 
-.places__element-arrow-up
+.travel__arrow-up
 {
     left: 345px;
 }
 
-.places__element-arrow-down
+.travel__arrow-down
 {
     left: 375px;
 }
 
-.places__element-change-button
+.travel__change-button
 {
     left: 10px;
     display: none;
 }
 
-.places__element-delete-button
+.travel__delete-button
 {
     left: 45px;
     display: none;
 }
 
-.places__element-cancel-button
+.travel__cancel-button
 {
     left: 275px;
     display: none;
 }
 
-.places__element-ok-button
+.travel__ok-button
 {
     left: 300px;
     display: none;
 }
 
 
-.places__element:hover > .places__element-change-button,
-.places__element:hover > .places__element-delete-button
+.places__travel:hover > .travel__change-button,
+.places__travel:hover > .travel__delete-button
 {
     display: block;
 }
