--- a/client/create-form/create-form.css
+++ b/client/create-form/create-form.css
@@ -1,3 +1,7 @@
+.container {
+    margin-bottom: 24px;
+}
+
 .form {
     display: flex;
     padding: 0 16px;
@@ -5,6 +9,7 @@
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    margin-bottom: 12px;
 }
 
 .input {
