Прошёлся Prettier'ом по проекту

--- a/src/components/App/common.css
+++ b/src/components/App/common.css
@@ -76,7 +76,7 @@ a,
 .link {
     color: #3757c5;
     text-decoration: none;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 }
 
 .bold {
@@ -106,6 +106,5 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-    -webkit-transition-delay: 9999s;
     -webkit-transition: color 9999s ease-out, background-color 9999s ease-out;
 }
