--- a/views/add-form/add-form.scss
+++ b/views/add-form/add-form.scss
@@ -9,8 +9,7 @@
         border-radius: 300px;
         background-color: white;
         border: 2px solid black;
-        margin-right: 5px;
-        margin-left: 5px;
+        margin: 0 5px;
     }
 
     &__input {
