--- a/public/index.css
+++ b/public/index.css
@@ -1,29 +1,35 @@
-body {
-    background-color:#FFDEAD;
+body
+{
+    background-color: #ffdead;
 }
 
 .footer
 {
     position: relative;
-    bottom: 0;
     right: 0;
+    bottom: 0;
     left: 0;
-    padding: 30px;
+
     display: flex;
     flex-direction: row;
+
+    padding: 30px;
+
     justify-content: space-between;
 }
 
 h1
 {
     text-align: center;
-    color:teal;
+
+    color: teal;
 }
 
 .header
 {
-    padding: 30px;
     font-size: 24px;
+
+    padding: 30px;
 }
 
 .main-page-header
@@ -31,23 +37,22 @@ h1
     font-size: 36px;
 }
 
-.div__inner{
-
-}
-
-.places{
+.places
+{
     position: relative;
 
     grid-area: places;
 }
 
-.shuffle{
+.shuffle
+{
     position: relative;
 
     grid-area: shuffle;
 }
 
-.mark{
+.mark
+{
     position: relative;
 
     grid-area: mark;
@@ -56,64 +61,82 @@ h1
 .icons
 {
     position: absolute;
-    text-align: center;
+
     visibility: hidden;
+
+    text-align: center;
+
     grid-area: icons;
 }
 
-.filterDiv:hover .icons{
+.filterDiv:hover .icons
+{
     visibility: visible;
 }
 
-#myDiv{
-    height: 50%;
+#myDiv
+{
     overflow: auto;
 
+    height: 50%;
 }
 
-img{
+img
+{
     width: 20px;
     height: 20px;
 }
 
-.container {
+.container
+{
     overflow: hidden;
 }
 
-.filterDiv {
-    display: grid;
+.filterDiv
+{
     position: relative;
+
+    display: grid;
+    visibility: hidden; /* Hidden by default */
+
+    margin: 2px;
+
+    text-align: center;
+
+    color: #fff;
+    background-color: #2196f3;
+
     grid-template-areas: 'icons places shuffle mark';
     grid-template-columns: .07fr .2fr .1fr .1fr;
-    background-color: #2196F3;
-    color: #ffffff;
-    /*line-height: 100px;*/
-    text-align: center;
-    margin: 2px;
-    visibility: hidden; /* Hidden by default */
 }
 
 /* The "show" class is added to the filtered elements */
-.show {
+.show
+{
     visibility: visible;
 }
 
 /* Style the buttons */
-.btn {
+.btn
+{
+    padding: 12px 16px;
+
+    cursor: pointer;
+
     border: none;
     outline: none;
-    padding: 12px 16px;
     background-color: #f1f1f1;
-    cursor: pointer;
 }
 
 /* Add a light grey background on mouse-over */
-.btn:hover {
+.btn:hover
+{
     background-color: #ddd;
 }
 
 /* Add a dark background to the active button */
-.btn.active {
-    background-color: #666;
+.btn.active
+{
     color: white;
+    background-color: #666;
 }
