--- a/public/style.css
+++ b/public/style.css
@@ -186,3 +186,20 @@ label
     justify-content: space-between;
     border-top: 1px solid #000;
 }
+
+.load-screen
+{
+    position: absolute;
+    display: flex;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.219);
+}
+
+.load-screen__text
+{
+    margin: auto;
+    color: #fff;
+}
