--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,10 @@
 .page {
     padding: 15px;
     margin: 0 auto;
+    min-width: 375px;
     max-width: 600px;
     font-size: 1.5rem;
+    box-sizing: border-box;
 }
 
 .page__main {
