--- a/src/components/PlaceCreateForm/PlaceCreateForm.css
+++ b/src/components/PlaceCreateForm/PlaceCreateForm.css
@@ -1,32 +1,30 @@
 .place-create {
-    width: 350px;
+    width: 320px;
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    border: 1px solid #eee;
-    border-radius: 3px;
-    padding: 5px;
 }
 
 .place-create__description {
+    flex: 4;
     border: 0;
     outline: 0;
-    width: 250px;
     padding-bottom: 5px;
     background: transparent;
     border-bottom: 1px solid #f00;
 }
 
 .place-create__submit {
+    flex: 1;
+    border: 0;
+    outline: 0;
     width: 70px;
     height: 30px;
-    outline: 0;
-    border: 0;
+    margin-left: 15px;
     border-radius: 3px;
     font-size: 1.4rem;
-    margin-left: 15px;
     background: #ffeba0;
+    cursor: pointer;
 }
 
 .place-create__submit-loader {
