--- a/src/components/PlacesHeader/PlaceHeader.css
+++ b/src/components/PlacesHeader/PlaceHeader.css
@@ -4,19 +4,19 @@
     align-items: center;
 }
 
+.places-header__clear,
+.places-header__clear-loader {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .places-header__clear {
     border: 0;
     padding: 0;
-    width: 22px;
-    height: 22px;
+    cursor: pointer;
     background: none;
-    margin-left: 10px;
-}
-
-.places-header__clear-loader {
-    width: 22px;
-    height: 22px;
-    margin-left: 10px;
 }
 
 .places-header__clear:hover .places-header__clear-icon {
@@ -28,13 +28,13 @@
 }
 
 .places-header__clear-icon {
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
 }
 
 .place-header__filters {
     font-size: 0;
-    margin-left: 30px;
+    margin-left: 10px;
     border: 1px solid #eee;
     border-radius: 4px;
 }
@@ -42,8 +42,10 @@
 .filter-button {
     border: 0;
     outline: 0;
+    font-size: 1.4rem;
     background: #fff;
     padding: 3px 10px;
+    cursor: pointer;
 }
 
 .filter-button:first-child {
