--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
             <nav class="main__nav">
                 <div class="main__nav__place">
                     <div>Места</div>
-                    <button class="main__nav__recycle">[x]</button>
+                    <div class="main__nav__recycle">&#128465;</div>
                 </div>
                 <div class="main__nav__filters">
                     <div class="main__nav__filters__all">Все</div>
