--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -167,6 +167,36 @@
   background-image: url("/icons/check.svg");
 }
 
+.records-list {
+    position: relative;
+
+}
+
+.spinner-wrapper {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.5;
+}
+
 .hidden {
-  display: none;
+    display: none;
+}
+
+.spinner {
+    margin: auto;
+    justify-self: center;
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
