--- a/views/partials/createForm.hbs
+++ b/views/partials/createForm.hbs
@@ -1,4 +1,4 @@
 <div class="create-form">
-    <input class="create-form_input" type="text" placeholder="Название">
-    <button class="create-form_btn">Создать</button>
+    <input class="create-form__input" type="text" placeholder="Название">
+    <button class="create-form__btn">Создать</button>
 </div>
