--- a/views/partials/placeView.hbs
+++ b/views/partials/placeView.hbs
@@ -1,34 +1,34 @@
 <div class="place-view">
     <div class="filter-box">
-        <div class="filter-box_title">
+        <div class="filter-box__title">
             <span>Места </span>
-            <div class="filter-box_delete-all">🗑</div>
+            <div class="filter-box__delete-all">🗑</div>
         </div>
-        <div class="filter-box_tumbs">
-            <input id="f1" class="filter-box_tumb" type="radio" name="filter" checked/>
+        <div class="filter-box__tumbs">
+            <input id="f1" class="filter-box__tumb" type="radio" name="filter" checked/>
             <label for="f1">Все</label>
-            <input id="f2" class="filter-box_tumb" type="radio" name="filter"/>
+            <input id="f2" class="filter-box__tumb" type="radio" name="filter"/>
             <label for="f2">Посетить</label>
-            <input id="f3" class="filter-box_tumb" type="radio" name="filter"/>
+            <input id="f3" class="filter-box__tumb" type="radio" name="filter"/>
             <label for="f3">Посещенные</label>
         </div>
     </div>
-    <div class="place-view_places">
+    <div class="place-view__places">
         {{#each places}}
             <div id={{id}} class="place">
-                <div class="place_main">
-                    <div class="place_change-btn">🖋</div>
-                    <div class="place_delete-btn">❌</div>
-                    <div class="place_description" style="text-decoration: {{textDecoration}}">{{description}}</div>
+                <div class="place__main">
+                    <div class="place__change-btn">🖋</div>
+                    <div class="place__delete-btn">❌</div>
+                    <div class="place__description" style="text-decoration: {{textDecoration}}">{{description}}</div>
                 </div>
-                <div class="place_controlls">
-                    <div class="place_dragdrop">🔀</div>
-                    <input class="place_checkbox" type="checkbox" {{visited}}/>
+                <div class="place__controlls">
+                    <div class="place__dragdrop">🔀</div>
+                    <input class="place__checkbox" type="checkbox" {{visited}}/>
                 </div>
-                <div class="place_input-сhange">
-                    <input class="place_input" type="text" value="{{description}}"/>
-                    <div class="place_cancel-btn">❌</div>
-                    <div class="place_confirm-btn">✅</div>
+                <div class="place__input-сhange">
+                    <input class="place__input" type="text" value="{{description}}"/>
+                    <div class="place__cancel-btn">❌</div>
+                    <div class="place__confirm-btn">✅</div>
                 </div>
             </div>
         {{/each}}
