--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -1,3 +1,3 @@
 <div class="search">
-    <input class="search_input" type="text" placeholder="🔍 Поиск"/>
+    <input class="search__input" type="text" placeholder="🔍 Поиск"/>
 </div>
