--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,16 @@
 </head>
 
 <body class="body">
+    <div class="templates">
+        <input type="button" value="✎" class="places-item__edit-button">
+        <input type="button" value="❌" class="places-item__delete-button">
+        <input type="text" class="places-item__name" disabled>
+        <input type="button" value="✓" class="places-item__save-button hidden">
+        <input type="button" value="✗" class="places-item__cancel-button hidden">
+        <input type="button" value="↑" class="places-item__up-button">
+        <input type="button" value="↓" class="places-item__down-button">
+        <input type="checkbox" class="places-item__visited">
+    </div>
     <input type="text" class="search__input" placeholder="Поиск">
     <div class="create">
         <input type="text" class="create__input" placeholder="Название места">
