--- a/views/partials/places.hbs
+++ b/views/partials/places.hbs
@@ -1,33 +1,5 @@
 <div class="places">
     {{>placesMenu}}
 
-    <ul class="places__list">
-        <input class="place__visit" type="checkbox" name="place__visit" id="v1">
-        <li class="place">
-            <label class="place__visit" for="v1"></label>
-            <button class="place__arrow btn-place down" type="button">↓</button>
-            <button class="place__arrow btn-place up" type="button">↑</button>
-            <h3 class="place__name">Место 1</h3>
-            <button class="place__delete btn-hidden btn-place" type="button"></button>
-            <button class="place__edit btn-hidden btn-place" type="button"></button>
-        </li>
-        <input class="place__visit" type="checkbox" name="place__visit" id="v2">
-        <li class="place">
-            <label class="place__visit" for="v2"></label>
-            <button class="place__arrow btn-place down" type="button">↓</button>
-            <button class="place__arrow btn-place up" type="button">↑</button>
-            <h3 class="place__name">Место 2</h3>
-            <button class="place__delete btn-hidden btn-place" type="button"></button>
-            <button class="place__edit btn-hidden btn-place" type="button"></button>
-        </li>
-        <input class="place__visit" type="checkbox" name="place__visit" id="v3">
-        <li class="place">
-            <label class="place__visit" for="v3"></label>
-            <button class="place__arrow btn-place down" type="button">↓</button>
-            <button class="place__arrow btn-place up" type="button">↑</button>
-            <h3 class="place__name">Место 3</h3>
-            <button class="place__delete btn-hidden btn-place" type="button"></button>
-            <button class="place__edit btn-hidden btn-place" type="button"></button>
-        </li>
-    </ul>
+    <ul class="places__list"></ul>
 </div>
