--- a/views/partials/placesMenu.hbs
+++ b/views/partials/placesMenu.hbs
@@ -3,7 +3,7 @@
 <input type="radio" name="place-filter" id="f3" class="menu__filter">
 <div class="places-menu">
     <h2 class="menu__title">Места</h2>
-    <button class="place__delete btn-place" type="button"></button>
+    <button class="place__delete btn-place" type="button" name="cleaner"></button>
     <div class="menu__filters">
         <label for="f1" class="menu__filter">Все</label>
         <label for="f2" class="menu__filter">Посетить</label>
