--- a/public/common/place-creator/place-creator__btn/place-creator__btn.css
+++ b/public/common/place-creator/place-creator__btn/place-creator__btn.css
@@ -13,10 +13,10 @@
 
 .place-creator__btn:hover
 {
-    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 6px 0 rgba(0, 0, 0, .4);
 }
 
 .place-creator__btn:active
 {
-    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .6);
 }
