--- a/public/common/place/place__arrow.css
+++ b/public/common/place/place__arrow.css
@@ -1,8 +1,6 @@
 .place__arrow
 {
-    height: 100%;
+    height: 42px;
     font-size: 36px;
     margin-left: -6px;
-    overflow: hidden;
-    background: transparent;
 }
