--- a/public/common/places-menu/menu__filter.css
+++ b/public/common/places-menu/menu__filter.css
@@ -24,15 +24,17 @@
     border-bottom-right-radius: 10px;
 }
 
-input.menu__filter:nth-of-type(1):checked ~ .places-menu .menu__filters .menu__filter:nth-of-type(1),
-input.menu__filter:nth-of-type(2):checked ~ .places-menu .menu__filters .menu__filter:nth-of-type(2),
-input.menu__filter:nth-of-type(3):checked ~ .places-menu .menu__filters .menu__filter:nth-of-type(3)
+/* stylelint-disable max-line-length */
+
+.menu__filter:nth-of-type(1):checked ~ .places-menu .menu__filter:nth-of-type(1),
+.menu__filter:nth-of-type(2):checked ~ .places-menu .menu__filter:nth-of-type(2),
+.menu__filter:nth-of-type(3):checked ~ .places-menu .menu__filter:nth-of-type(3)
 {
     background-color: deepskyblue;
 }
 
-input.menu__filter:nth-of-type(2):checked ~ .places__list input.place__visit:checked + .place,
-input.menu__filter:nth-of-type(3):checked ~ .places__list input.place__visit:not(:checked) + .place
+.menu__filter:nth-of-type(2):checked ~ .places__list .place__visit:checked + .place,
+.menu__filter:nth-of-type(3):checked ~ .places__list .place__visit:not(:checked) + .place
 {
     display: none;
 }
