--- a/public/components/scripts.html
+++ b/public/components/scripts.html
@@ -1,4 +1,6 @@
 <script src="/config.js"></script>
+<script src="/api.js"></script>
+<script src="/places/drawingList.js"></script>
 <script src="/places/getAllPlace.js"></script>
 <script src="/places/placesList/placeVisit.js"></script>
 <script src="/places/deleteAll.js"></script>
