--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,5 @@
 @import "https://use.fontawesome.com/releases/v5.0.8/css/all.css";
-@import "blocks/list-filter.css";
+@import "blocks/filtered-list.css";
 @import "blocks/search-box.css";
 @import "blocks/list-item.css";
 @import "blocks/font-icon.css";
